<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tbg"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="364dp"
        android:layout_height="158dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="27dp"
        android:src="@drawable/tasqlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username1"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/tblue"
        android:textColorHint="@color/tblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/fpassword"
        android:textColor="@color/tblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/tblue"
        android:textColor="@color/tblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username1" />

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="327dp"
        android:layout_height="55dp"
        android:layout_gravity="start"
        android:backgroundTint="@color/tblue"
        android:text="@string/login"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textColor="@color/tblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsignin1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/noaccount"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsignin1" />

</androidx.constraintlayout.widget.ConstraintLayout>